// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render 1`] = `
<span
  aria-label="su-save"
  class="su su-save"
/>
`;

exports[`Icon should render with class names 1`] = `
<span
  aria-label="su-pen"
  class="test su su-pen"
/>
`;

exports[`Icon should render with onClick handler, role and tabindex 1`] = `
<span
  aria-label="su-save"
  class="test su su-save clickable"
  role="button"
  tabindex="0"
/>
`;
